<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_all_rights_reserved">All rights reserved</string>
    <string name="about_copyright">Copyright © 2018 yuanwofei</string>
    <string name="about_donate_select_qr_code">Please click on the upper right corner of the menu and select the QR-code from the album</string>
    <string name="about_version">Version %1$s</string>
    <string name="apdu_aiddescription">aiddescription</string>
    <string name="apdu_servicedesc">servicedesc</string>
    <string name="app_name">Card Emulator</string>
    <string name="btn_action_add">Add</string>
    <string name="btn_action_backup">Backup</string>
    <string name="btn_action_cancel">Cancel</string>
    <string name="btn_action_close">Close</string>
    <string name="btn_action_contact">Contact</string>
    <string name="btn_action_modify">Modify</string>
    <string name="btn_action_ok">OK</string>
    <string name="btn_action_reboot">Reboot</string>
    <string name="btn_action_restore">Restore</string>
    <string name="btn_action_save">Save</string>
    <string name="btn_action_send_to_desktop">Add to homeScreen</string>
    <string name="btn_action_simulate"> simulate </string>
    <string name="btn_action_simulated">simulated</string>
    <string name="btn_action_unlock">Unlock</string>
    <string name="btn_action_update">Update</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="donate_tip">If you like this app, please feel free to donate</string>
    <string name="menu_about">About</string>
    <string name="menu_add_card">Add a card manually</string>
    <string name="menu_advanced">Advanced</string>
    <string name="menu_backup_restore">Backup/Restore</string>
    <string name="menu_check_update">Check for updates</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_get_pro_version">Get Pro version</string>
    <string name="menu_help">Help</string>
    <string name="menu_language">Language</string>
    <string name="menu_nfc_function">NFC detect</string>
    <string name="menu_nfc_setting">NFC settings</string>
    <string name="menu_reader_mode">Card reader mode</string>
    <string name="menu_restore_nfc_conf">Restore</string>
    <string name="menu_unlock_system">Unlock system partition</string>
    <string name="menu_wallet_setting">Set as default Wallet</string>
    <string name="menu_xposed">Xposed</string>
    <string name="msg_add_card_tip">"Put the card on the back of your phone
(NFC chip location)"</string>
    <string name="msg_add_cards_first">Please add a card and try again</string>
    <string name="msg_add_fail">Failed to add, please try again</string>
    <string name="msg_add_new_card">Add a new card</string>
    <string name="msg_add_success">Added successfully</string>
    <string name="msg_adding_card">Adding</string>
    <string name="msg_backup_cards_success">Successfully backed-up cards: %1$s</string>
    <string name="msg_backup_restore_cards">Backup/Restore cards</string>
    <string name="msg_card_id_invalid">The format is incorrect and must be two hexadecimal digits</string>
    <string name="msg_card_invalid">Card %1$s not supported, please use a different card</string>
    <string name="msg_card_name_must_no_empty">Card name can not be empty</string>
    <string name="msg_checking_update">Checking update</string>
    <string name="msg_close_app">Press the Back button again to close the app</string>
    <string name="msg_conf_invalid">NFC configuration file is invalid</string>
    <string name="msg_confirm_delete">Are you sure you want to delete %1$s?</string>
    <string name="msg_create_magisk_module_successfully">Successfully generated Magisk Module: %1$s</string>
    <string name="msg_create_tsk_fail">Failed to create: %1$s</string>
    <string name="msg_create_tsk_success">Created successfully: %1$s</string>
    <string name="msg_delete_failed">Failed to delete</string>
    <string name="msg_disable_nfc_sound">Disable NFC sound</string>
    <string name="msg_download_fail">Download failed</string>
    <string name="msg_enable_nfc_screen_off">Enable NFC when screen is off</string>
    <string name="msg_find_no_conf">No NFC configuration file found</string>
    <string name="msg_has_not_browse">"Can't open the link, no browser app installed"</string>
    <string name="msg_hide_cardId">Hide card ID</string>
    <string name="msg_input_tip">Enter the card name</string>
    <string name="msg_install_alipay">Install Alipay app and try again</string>
    <string name="msg_install_email_tip">Please install an email app and try again</string>
    <string name="msg_install_google_play">You should install Google Play first and try again</string>
    <string name="msg_install_wechat">Install WeChat app and try again</string>
    <string name="msg_invalid_cardid">Card ID is invalid</string>
    <string name="msg_latest_version">This is the latest version</string>
    <string name="msg_manually_restart_nfc">Please manually restart NFC to simulate card</string>
    <string name="msg_manually_restore">Please manually restart NFC to restore</string>
    <string name="msg_new_version">The latest version: %1$s</string>
    <string name="msg_nfc_detect_toggle">Please wait 5 seconds before enabling/disabling the NFC detect feature</string>
    <string name="msg_nfc_unavailable">NFC is unavailable</string>
    <string name="msg_no_find_googleplay">Did not find Google Play. Is it installed correctly?</string>
    <string name="msg_no_found_bak_cards">Did not find any backed-up cards</string>
    <string name="msg_no_nfc_setting">Did not find NFC settings</string>
    <string name="msg_open_with_browser">Please select a browser app to open help documentation</string>
    <string name="msg_partition_unlock">System partition is locked: %1$s</string>
    <string name="msg_phone_no_root">Unable to get root privileges to make sure your phone is root</string>
    <string name="msg_read_help">Firstly, read the help documentation</string>
    <string name="msg_reader_mode_turn_off">The card reader mode has been turned off</string>
    <string name="msg_reader_mode_turn_on">The card reader mode has been turned on</string>
    <string name="msg_reboot_to_unlock">Try to reboot your phone to the unlock system partition. If that does not work after reboot, you should unlock system partition first and then try again</string>
    <string name="msg_rebooting">Rebooting</string>
    <string name="msg_restore_cards_success">Successfully restored cards</string>
    <string name="msg_restore_nfc_conf">Are you sure you want to restore the default NFC configuration?</string>
    <string name="msg_restore_success">Restore successful</string>
    <string name="msg_restoring">Restoring</string>
    <string name="msg_send_shortcut_success">Successfully created shortcut on homeScreen</string>
    <string name="msg_set_default_wallet">Card Emulator is the default Wallet</string>
    <string name="msg_show_cardId">Show card ID</string>
    <string name="msg_simulating">Simulating %1$s</string>
    <string name="msg_simulation_card_successful">Successfully simulated %1$s</string>
    <string name="msg_successfully_deleted">Successfully deleted</string>
    <string name="msg_unlock_system_tip">Unlock system partition is an experimental feature and is not guaranteed to work, it will automatically restart your phone unlocked</string>
    <string name="msg_unlocking_system">Unlocking system partition</string>
    <string name="msg_unsupport_function">Your phone does not support this feature</string>
    <string name="msg_xposed_description">Enable NFC and disable NFC sound when screen is off</string>
    <string name="msg_xposed_features">Xposed features</string>
    <string name="permission_explanation" formatted="false">"Need to grant \"%s\" to function properly.
Go to: Settings->Apps->%s->Permissions"</string>
    <string name="permission_function_error">Function-error</string>
    <string name="permission_goto_setting">Set up</string>
    <string name="permission_write_storage">Access storage permission</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
